--- a/_posts/2020-2-24-[全民写端]#1配置开发环境.md
+++ b/_posts/2020-2-24-[全民写端]#1配置开发环境.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #1 配置开发环境"
+title: "[全民写端]#1配置开发环境"
 date: 2020-2-24 18:36
 categories: minecraftclient
 ---
