--- a/_posts/2020-2-25-[全民写端]#3添加Optifine.md
+++ b/_posts/2020-2-25-[全民写端]#3添加Optifine.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #3 添加OptiFine"
+title: "[全民写端]#3添加OptiFine"
 date: 2020-2-25 12:16
 categories: minecraftclient
 ---
