--- a/_posts/2020-2-25-[全民写端]#5自动疾跑.md
+++ b/_posts/2020-2-25-[全民写端]#5自动疾跑.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #5 自动疾跑"
+title: "[全民写端]#5自动疾跑"
 date: 2020-2-25 13:40
 categories: minecraftclient
 ---
