--- a/_posts/2020-2-25-[全民写端]#6添加Setting.md
+++ b/_posts/2020-2-25-[全民写端]#6添加Setting.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #6 添加Setting"
+title: "[全民写端]#6添加Setting"
 date: 2020-2-25 18:00
 categories: minecraftclient
 ---
