--- a/_posts/2020-2-25-[全民写端]#7添加Command.md
+++ b/_posts/2020-2-25-[全民写端]#7添加Command.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #7 添加Command"
+title: "[全民写端]#7添加Command"
 date: 2020-2-25 18:34
 categories: minecraftclient
 ---
