--- a/_posts/2020-2-26-[全民写端]#8简化代码.md
+++ b/_posts/2020-2-26-[全民写端]#8简化代码.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #8 简化代码"
+title: "[全民写端]#8简化代码"
 date: 2020-2-26 16:46
 categories: minecraftclient
 ---
