--- a/_posts/2020-2-28-[全民写端]#9添加配置.md
+++ b/_posts/2020-2-28-[全民写端]#9添加配置.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #9 添加配置"
+title: "[全民写端]#9添加配置"
 date: 2020-2-28 12:21
 categories: minecraftclient
 ---
