--- a/_posts/2020-3-14-[全民写端]#12-绘制ClickGUI.md
+++ b/_posts/2020-3-14-[全民写端]#12-绘制ClickGUI.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #12 绘制ClickGUI"
+title: "[全民写端]#12绘制ClickGUI"
 date: 2020-3-14 17:52
 categories: minecraftclient
 ---
