--- a/_posts/2020-3-3-[全民写端]#11绘制主菜单.md
+++ b/_posts/2020-3-3-[全民写端]#11绘制主菜单.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #11 绘制主菜单"
+title: "[全民写端]#11绘制主菜单"
 date: 2020-3-3 11:01
 categories: minecraftclient
 ---
