--- a/_posts/2020-2-25-[全民写端]#2设置启动和停止.md
+++ b/_posts/2020-2-25-[全民写端]#2设置启动和停止.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Minecraft Client 教程 #2 设置启动和停止"
+title: "[全民写端]#2设置启动和停止"
 date: 2020-2-25 10:42
 categories: minecraftclient
 ---
