--- a/_posts/2021-2-21-[LWJGL3教程]#2创建一个窗口.markdown
+++ b/_posts/2021-2-21-[LWJGL3教程]#2创建一个窗口.markdown
@@ -75,5 +75,7 @@ public static void main(String[] args) {
     while (!glfwWindowShouldClose(window)) {
         glfwPollEvents();
     }
+
+    glfwTerminate();//终止
 }
 ```
