--- a/_posts/2021-2-21-[LWJGL3-2D教程]#4按键.markdown
+++ b/_posts/2021-2-21-[LWJGL3-2D教程]#4按键.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "[LWJGL3 2D教程]#4按键"
 data: 2021-2-21 18:43
-categories: cf4m
+categories: lwjgl3
 ---
 
 按键很简单，如果`K`按下，就会输出“K press“
