--- a/_posts/2021-2-21-[CF4M教程]#4写一个简单的Config.markdown
+++ b/_posts/2021-2-21-[CF4M教程]#4写一个简单的Config.markdown
@@ -40,7 +40,7 @@ public class ModuleConfig {
 ```java
 @Load
 public void load() {
-    for (Object module : CF4M.INSTANCE.module.getModules()) {//遍历所有Module
+    for (ModuleProvider module : CF4M.MODULE.getAll()) {//遍历所有Module
         JsonArray jsonArray = new JsonArray();
         try {
             jsonArray = new Gson().fromJson(read(CF4M.INSTANCE.config.getPath(this)), JsonArray.class);//读取配置文件并存入JsonArray
@@ -49,11 +49,11 @@ public void load() {
         }
         for (JsonElement jsonElement : jsonArray) {//遍历JsonArray
             JsonObject jsonObject = jsonElement.getAsJsonObject();//获取JsonObject
-            if (CF4M.INSTANCE.module.getName(module).equals(new Gson().fromJson(jsonObject, JsonObject.class).get("name").getAsString())) {//判断当前Module的名字，是否和Json对象里的名字一样
+            if (module.getName().equals(new Gson().fromJson(jsonObject, JsonObject.class).get("name").getAsString())) {//判断当前Module的名字，是否和Json对象里的名字一样
             if (jsonObject.get("enable").getAsBoolean()) {//如果一样，获取Module是否打开
-                CF4M.INSTANCE.module.enable(module);//打开的话就打开这个Module
+                module.enable();//打开的话就打开这个Module
             }
-            CF4M.INSTANCE.module.setKey(module, jsonObject.get("key").getAsInt());//获取配置的Key并修改Module的快捷键
+            module.setKey(jsonObject.get("key").getAsInt());//获取配置的Key并修改Module的快捷键
             }
         }
     }
@@ -66,16 +66,16 @@ public void load() {
 @Save
 public void save() {
     JsonArray jsonArray = new JsonArray();
-    for (Object module : INSTANCE.module.getModules()) {// 遍历所有Module
+    for (ModuleProvider module : CF4M.MODULE.getAll()) {// 遍历所有Module
         //获取Module的，名字、开启状态、快捷键，创建为JsonObject对象，添加到JsonArray
         JsonObject jsonObject = new JsonObject();
-        jsonObject.addProperty("name", INSTANCE.module.getName(module));
-        jsonObject.addProperty("enable", INSTANCE.module.getEnable(module));
-        jsonObject.addProperty("key", INSTANCE.module.getKey(module));
+        jsonObject.addProperty("name", module.getName());
+        jsonObject.addProperty("enable", module.getEnable());
+        jsonObject.addProperty("key", module.getKey());
         jsonArray.add(jsonObject);
     }
     try {
-        write(INSTANCE.config.getPath(this), new Gson().toJson(jsonArray));//写入Json文件
+        write(CF4M.CONFIG.getByInstance(this).getPath(), new Gson().toJson(jsonArray));//写入Json文件
     } catch (IOException e) {
         e.printStackTrace();
     }
