--- a/content/post/2022-11-24-Hugo教程#3单页面布局.md
+++ b/content/post/2022-11-24-Hugo教程#3单页面布局.md
@@ -12,7 +12,18 @@ date: 2022-11-24T10:58:26+08:00
 在`layouts/_default`里有一个`single.html`的布局,默认是空的,我们只需要读取到`markdown`的内容,之后呈现在页面中
 
 ```html
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ .Title }}</title>
+</head>
+<body>
+    {{ .Content }}
+</body>
+</html>
 ```
 
 ## 测试
