--- a/content/post/2022-11-24-Hugo教程#4基础布局.md
+++ b/content/post/2022-11-24-Hugo教程#4基础布局.md
@@ -47,7 +47,7 @@ date: 2022-11-24T11:30:04+08:00
 }
 ```
 
-在`layouts/partials/head.html`的布局中引入css,需要注意的是static是在根目录下,所以不用写,直接从static里的路径开始引用就行了
+在`layouts/partials/head.html`的布局中引入css,需要注意的是static是在根目录下,所以不用写,直接从static里的路径开始引用就行了,其实partials就相当于吧赋分文件内容给放到另一个文件中了,然后使用partial来引用这个文件的内容
 
 ```html
 <head>
