--- a/content/zh/post/2024-8-3-星露谷模组开发教程#2-创建模组项目.md
+++ b/content/zh/post/2024-8-3-星露谷模组开发教程#2-创建模组项目.md
@@ -8,11 +8,11 @@ date: 2024-08-03T18:15:46+08:00
 
 经过之前的配置，现在可以创建模组项目了，我们可以创建一个空白的文件夹，然后用`Visual Studio Code`打开它，之后使用`dotnet new classlib`来创建一个项目。
 
-我们可以看到，项目中有一个`Class1.cs`文件，这个就是`C#`的源文件，还有一个`awesome.csproj`文件，这个是`C#`项目的配置文件。
+我们可以看到，项目中有一个`Class1.cs`文件，这个就是`C#`的源文件，还有一个`awesome.csproj`文件，这个是`C#`项目的配置文件，我们需要将里面的`net8.0`改为`net6.0`。
 
 我们可以将`Class1.cs`名称改为我们想要的名称，比如这里我就叫`ModEntry.cs`，之后将源文件里的类名也改为`ModEntry`。
 
-之后需要添加模组需要用到的`NuGet`包，我们可以使用命令`dotnet add package Pathoschild.Stardew.ModBuildConfig`来添加模组所需用的包。
+之后需要添加模组需要用到的`NuGet`包，我们可以使用命令`dotnet add package Pathoschild.Stardew.ModBuildConfig`来添加模组所需用的包。'
 
 ## 编写模组代码
 
