--- a/content/zh/post/2024-8-10-星露谷模组开发教程#7-自定义机器.md
+++ b/content/zh/post/2024-8-10-星露谷模组开发教程#7-自定义机器.md
@@ -8,6 +8,8 @@ date: 2024-08-10T16:20:59+08:00
 
 机器也算是大型工艺品，所以我们需要先添加它的大型工艺品。
 
+这里做一张`16x32`格式为`png`的图。
+
 ![Orearium](https://s2.loli.net/2024/08/10/aoNjZsL12gcHwUY.png)
 
 ```csharp
