--- a/content/zh/post/2024-8-7-星露谷模组开发教程#5-自定义物品.md
+++ b/content/zh/post/2024-8-7-星露谷模组开发教程#5-自定义物品.md
@@ -20,7 +20,7 @@ if (e.Name.IsEquivalentTo("Data/Objects"))
         {
             Name = "Awesome_Diamond",
             DisplayName = "Diamond",
-            Description = "This is a diamond form Minecraft.",
+            Description = "This is a diamond from Minecraft.",
             Type = "Minerals",
             Category = StardewValley.Object.GemCategory,
             Price = 10000,
@@ -34,6 +34,8 @@ if (e.Name.IsEquivalentTo("Data/Objects"))
 首先我们先判断是否为`Data/Objects`，接着我们使用`ObjectData`去创建一个`ObjectData`对象，然后我们设置`Name`，`DisplayName`，`Description`，`Type`，`Category`，`Price`，`SpriteIndex`，`Texture`，最后我们将这个对象添加到`Data`中。
 
 ## 添加物品图片
+
+这里做一张`16x16`格式为`png`的图。
 
 ![Diamond](https://s2.loli.net/2024/08/08/MizstxXLmlvdCuU.png)
 
