--- a/content/zh/post/2024-8-11-星露谷模组开发教程#8-自定义武器.md
+++ b/content/zh/post/2024-8-11-星露谷模组开发教程#8-自定义武器.md
@@ -6,6 +6,8 @@ date: 2024-08-11T00:03:18+08:00
 
 添加武器还是比较简单的，只需要在 `Data/Weapons` 中添加一个新的武器数据即可。
 
+这里做一张`16x16`格式为`png`的图。
+
 ![TheLastSword](https://s2.loli.net/2024/08/11/ybqCiZQvUTMrdF2.png)
 
 ```csharp
